--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             );
         });    
     </script>
-    <!-- <script type="text/javascript" src="https://daks2k3a4ib2z.cloudfront.net/5317d67d660658b254000454/js/webflow.js?2f83b8326cc4c8f7327b5dba30444a37"></script> -->
+    <script type="text/javascript" src="webflow/webflow.js"></script>
     <!-- 슬릭 -->
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
